fix page count in printing

BUG: 246699